# C_Projects

C_Chatbot/: CMakeLists.txt  README.md  hotelBookingCorpus.txt  roomServiceCorpus.txt
C_Chatbot/src/: chatbotLogic.c  chatbotLogic.h  fileReadWrite.c  fileReadWrite.h  main.c  preProcessing.c  preProcessing.h  unit_tests.c
C_Chatbot/unity/src/: unity.h
c_librarysystem/: CMakeLists.txt  README.md  books.txt  loans.txt  users.txt
c_librarysystem/src/: book_management.c  book_management.h  loans.c  loans.h  main.c  user.h  user_management.c
c_packetsniffer/: CMakeLists.txt  README.md  main.c
